[package]
name = "tplink"
version = "0.1.0"
authors = ["Utsav Oza <utsavoza96@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.7"

[[example]]
name = "sysinfo"
path = "examples/sysinfo.rs"

[[example]]
name = "bulb"
path = "examples/bulb.rs"

[[example]]
name = "plug"
path = "examples/plug.rs"
